# temprorary_notify_app

./: .dockerignore  .env  .gitignore  .replit  CLEANUP_SCRIPT.md  CLIENT_GUIDEBOOK.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DEPLOYMENT_CHECKLIST.md  ENTERPRISE_MIGRATION_GUIDE.md  EXECUTIVE_SUMMARY.md  FINAL_MIGRATION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_COMPLETION_PLAN.md  MIGRATION_FINAL_SUMMARY.md  MIGRATION_STATUS.md  MIGRATION_STATUS_FINAL.md  MIGRATION_WORK_COMPLETED.md  Makefile  PROGRESS_TRACKER.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  WHAT_WAS_BUILT.md  docker-compose.prod.yml  docker-compose.yml  migrate_ui_components.py  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
attached_assets/: Pasted--Free-Plan-Personal-Use-Freemium-Goal-Give-enough-utility-for-individuals-to-stay-but-lo-1755414269003_1755414269004.txt  Pasted--Product-Tiers-Onboarding-Tiers-Personal-Free-Freemium-Private-Second-Bra-1755367891744_1755367891745.txt  Pasted-AI-Note-taking-basic-NLP-task-extraction-up-to-5-tasks-day-Personal-Task-Board-single-workspace-1755427880202_1755427880202.txt  Pasted-You-are-an-expert-full-stack-engineer-tasked-with-refactoring-and-migrating-a-full-scale-AI-powered--1763580143688_1763580143688.txt
backend/: .env.example  Dockerfile  cache.py  celery_app.py  database.py  dependencies.py  main.py  models.py  requirements.txt
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
k8s/: backend.yaml  redis.yaml  (+6 more)
(+79 files in other folders)
