[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "authlib>=1.6.5",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "openai>=2.8.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "stripe>=14.0.0",
    "uvicorn[standard]>=0.38.0",
]
